--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head> 
 <body class="container">
     <header> 
-        <a class="header" href="#">Ra<span class="header_2">mda.js</span></a>
+        <a class="logo" href="#">Ra<span class="span_logo">mda.js</span></a>
     </header>
     <nav class="navigation">
         <a class="nav_link link_border"  href="#">Functional Programming</a>
@@ -28,10 +28,10 @@
          <a class="column_link"href="#">Philosophy</a>
      </nav>
         <div>
-        <div class="picture"><img src="img/top1-img 1.jpg" alt="picture"></div>
-        <div class="text"><p class="text_1">Lorem ipsum — классическая панграмма, условный, зачастую бессмысленный текст-заполнитель, вставляемый в макет страницы. Используется в качестве заполнителя по крайней мере с XVI века. Является искажённым отрывком из философского трактата Марка Туллия Цицерона «О пределах добра и зла», написанного в 45 году до н. э. на латинском языке, обнаружение сходства атрибутируется Ричарду МакКлинтоку.
+        <div class="picture"><img class="img_hover" src="img/top1-img 1.jpg" alt="picture"></div>
+        <div class="text"><p class="text_first">Lorem ipsum — классическая панграмма, условный, зачастую бессмысленный текст-заполнитель, вставляемый в макет страницы. Используется в качестве заполнителя по крайней мере с XVI века. Является искажённым отрывком из философского трактата Марка Туллия Цицерона «О пределах добра и зла», написанного в 45 году до н. э. на латинском языке, обнаружение сходства атрибутируется Ричарду МакКлинтоку.
         </p>
-        <p class="text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="text_added">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
        </div>
 </section>
 <footer>
@@ -40,7 +40,7 @@
         <a class="nav_link_down" href="#">Why Ramda?</a>
         <a class="nav_link_down" href="#">What's different?</a>
         <a class="nav_link_down" href="#">Philosophy</a>  
-        <a class="copyright">Copyright © 2018</a>
+        <p class="copyright">Copyright © 2018</p>
     </nav>
 </footer>
 </body>
